Faz o I18n nas páginas index e show
Co-authored-by: ana-borowsky <ana-borowsky@users.noreply.github.com>

--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -6,6 +6,7 @@ pt-BR:
         other: Promoções
     attributes:
       promo:
+        promo: Promoção
         starting_date: Data de início
         discount_max: Valor máximo de desconto
         voucher: Cupom
