Admin vê usuários cadastrados em uma tela separada (WIP)

--- a/config/locales/pt-BR/user.pt-BR.yml
+++ b/config/locales/pt-BR/user.pt-BR.yml
@@ -1,10 +1,4 @@
 pt-BR:
-  activerecord:
-    errors:
-      models:     
-        user:
-          attributes:
-            email:
-              blank: 'E-mail não pode ficar em branco.'
-            senha:
-              blank: 'Senha não pode ficar em branco.'
+  pending: 'pendente'
+  approved: 'aprovado'
+            
