Administrador muda status do cadastro de usuários
Co-authored-by: petragrunheidt <petragrunheidt@gmail.com>

--- a/config/locales/pt-BR/user/user.pt-BR.yml
+++ b/config/locales/pt-BR/user/user.pt-BR.yml
@@ -1,13 +1,14 @@
 pt-BR:
   pending: 'pendente'
   approved: 'aprovado'
+  refused: 'recusado'
   activerecord:
     user:
       one: 'Usuário'
       two: 'Usuários'
     attributes:
       name: 'Nome'
-      email: 'Email'
+      email: 'E-mail'
       registration_number: 'CPF'
       
             
