--- a/config/locales/pt-BR/user_approval/user_approval.pt-BR.yml
+++ b/config/locales/pt-BR/user_approval/user_approval.pt-BR.yml
@@ -1,9 +1,9 @@
 pt-BR:
+  approve_register: 'Aprovar Cadastro?'
   activerecord:
     models:
       user_approval: 'Aprovação de Usuário'
     attributes:
       user_approval:
-        status: 'Aprovar Cadastro?'
         refusal: 'Motivo de reprovação (caso não)'
       
