--- a/config/locales/pt-BR/user/user.pt-BR.yml
+++ b/config/locales/pt-BR/user/user.pt-BR.yml
@@ -7,6 +7,7 @@ pt-BR:
       one: 'Usuário'
       two: 'Usuários'
     attributes:
+      status: 'Status de aprovação'
       name: 'Nome'
       email: 'E-mail'
       registration_number: 'CPF'
