--- a/config/locales/pt-BR/user_approval/user_approval.pt-BR.yml
+++ b/config/locales/pt-BR/user_approval/user_approval.pt-BR.yml
@@ -5,5 +5,6 @@ pt-BR:
       user_approval: 'Aprovação de Usuário'
     attributes:
       user_approval:
-        refusal: 'Motivo de reprovação (caso não)'
+        status: 'Status de aprovação'
+        refusal: 'Motivo de reprovação'
       
