login_as nos testes de promo e def update
Co-authored-by: ana-borowsky <ana-borowsky@users.noreply.github.com>

--- a/config/locales/controllers.pt-BR.yml
+++ b/config/locales/controllers.pt-BR.yml
@@ -4,3 +4,6 @@ pt-BR:
       create:
         success: Promoção cadastrada com sucesso!
         fail: Não foi possível cadastrar a promoção
+      update:
+        success: Promoção atualizada com sucesso!
+        fail: Não foi possível atualizar a promoção
