Implementa upload e visualização de ícone do meio de pagamento
Co-authored-by: brunabarbozavieira <bruna.barboza111@gmail.com>

--- a/config/locales/payment_methods.pt-BR.yml
+++ b/config/locales/payment_methods.pt-BR.yml
@@ -13,4 +13,5 @@ pt-BR:
         tax_maximum: 'Taxa Máxima'
         payment_type: 'Tipo de Pagamento'
         status: 'Status'
+        image: 'Ícone'
      
