Adiciona mais validações para cadastro de Usuario
Co-authored-by: minccia <lusyva.pro@gmail.com>

--- a/config/locales/controllers.pt-BR.yml
+++ b/config/locales/controllers.pt-BR.yml
@@ -1,5 +1,7 @@
 pt-BR:
   controllers:
+    application:
+      internal_error: 'Erro de servidor. Por favor tente novamente mais tarde.'
     promos:
       create:
         success: Promoção cadastrada com sucesso!
