Alterado nome do model UserApproval para UserReview e atributo status de boolean para enum

--- a/config/locales/pt-BR/user_approval/user_review.pt-BR.yml
+++ b/config/locales/pt-BR/user_approval/user_review.pt-BR.yml
@@ -1,11 +1,10 @@
 pt-BR:
-  
   approve_register: 'Aprovar Cadastro?'
   activerecord:
     models:
-      user_approval: 'Aprovação de Usuário'
+      user_review: 'Aprovação de Usuário'
     attributes:
-      user_approval:
+      user_review:
         status: 'Status de aprovação'
         refusal: 'Motivo de reprovação'
       
