--- a/config/locales/pt-BR/user/dicionário.pt-BR.yml
+++ b/config/locales/pt-BR/user/dicionário.pt-BR.yml
@@ -4,4 +4,6 @@ pt-BR:
   registration: 'Cadastro'
   evaluate_registration: 'Avaliar Cadastro'
   no_access_granted: 'Acesso negado.'
+  user_login: 'Login do funcionário da seguradora'
+  
   
