mudanças no estilo de layout e de index de payment methods

--- a/config/locales/pt-BR/user/dicionário.pt-BR.yml
+++ b/config/locales/pt-BR/user/dicionário.pt-BR.yml
@@ -5,5 +5,7 @@ pt-BR:
   evaluate_registration: 'Avaliar Cadastro'
   no_access_granted: 'Acesso negado.'
   user_login: 'Login do funcionário da seguradora'
+  app_name: 'Pagamento e Antifraude'
+  waiting_for_approval: 'Aguardando aprovação do administrador do sistema.'
   
   
