Inclui classes css relativas ao model payment_method

--- a/config/locales/payment_methods.pt-BR.yml
+++ b/config/locales/payment_methods.pt-BR.yml
@@ -1,6 +1,7 @@
 pt-BR:
   active: 'Ativo'
   inactive: 'Inativo'
+  payment_method_details: 'Detalhes do Meio de Pagamento'
   activerecord:
     models:
       payment_method:
