--- a/config/locales/payment_methods.pt-BR.yml
+++ b/config/locales/payment_methods.pt-BR.yml
@@ -2,6 +2,7 @@ pt-BR:
   active: 'Ativo'
   inactive: 'Inativo'
   payment_method_details: 'Detalhes do Meio de Pagamento'
+  actual_icon: 'Ícone Atual'
   activerecord:
     models:
       payment_method:
