adiciona função de remover produto de promoçao, validacao para produto ser unico dentro da promocao e melhora views dessa funcionalidade
Co-authored-by: anavonborowsky <anavonborowsky@gmail.com>

--- a/config/locales/pt-BR/promo_products/notice.pt-BR.yml
+++ b/config/locales/pt-BR/promo_products/notice.pt-BR.yml
@@ -1,3 +1,4 @@
 pt-BR:
   promo_product_create: 'Produto adicionado com sucesso.'
-  promo_product_remove: 'Produto removido com sucesso.'
+  promo_product_destroy: 'Produto removido com sucesso.'
+  activerecord_errors_models_product_unique_within_promo: 'já foi adicionado a esta promoção.'
