--- a/config/locales/pt-BR/company_payment_options/model.pt-BR.yml
+++ b/config/locales/pt-BR/company_payment_options/model.pt-BR.yml
@@ -4,6 +4,9 @@ pt-BR:
     dont_have: 'Não Possui'
     no_payment_options: 'Ainda não há opções de pagamento configuradas para esta seguradora'
     payment_option_details: 'Detalhes da opção de pagamento'
+    new_payment_option: 'Nova opção de pagamento'
+    payment_option_created_with_success: 'Opção de pagamento criada com sucesso'
+    not_created: 'Opção de pagamento não foi criada'
   activerecord:
     models:
       company_payment_option: 
@@ -12,10 +15,8 @@ pt-BR:
     attributes:
       company_payment_option:
         user_id: 'Usuário responsável'
-        payment_method_id: 'Meio de Pagamento'
+        payment_method_id: 'Tipo de Pagamento'
+        payment_method: 'Tipo de Pagamento'
         insurance_company_id: 'Companhia de Seguros'
-        max_parcels:
-          formats: 
-            long: 'Quantidade máxima de parcelas'
-            abbr: 'Qtd. Máx. Parcelas'
+        max_parcels: 'Quantidade máxima de parcelas'
         single_parcel_discount: 'Desconto à vista'
