Ajusta view index de invoice e rubocop

--- a/config/locales/pt-BR/models.pt-BR.yml
+++ b/config/locales/pt-BR/models.pt-BR.yml
@@ -22,6 +22,7 @@ pt-BR:
         discount_percentage: Porcentagem de desconto
         name: Nome
       invoice:
+        invoice: Cobranças
         status: Status
         token: Token
         package_id: ID Pacote de Seguros
