--- a/config/locales/pt-BR/models.pt-BR.yml
+++ b/config/locales/pt-BR/models.pt-BR.yml
@@ -22,12 +22,14 @@ pt-BR:
         discount_percentage: Porcentagem de desconto
         name: Nome
       invoice:
-        invoice: Cobranças
+        invoice: Cobrança
         status: Status
         token: Token
         package_id: ID Pacote de Seguros
         registration_number: CPF
         insurance_company_id: ID Seguradora
+        order_id: ID Pedido
+        payment_method_id: Meio de Pagamento
     errors: 
       models:
         promo:
