Refatora views show e index de invoice e tradução do status do invoice

--- a/config/locales/pt-BR/models.pt-BR.yml
+++ b/config/locales/pt-BR/models.pt-BR.yml
@@ -1,7 +1,7 @@
 pt-BR:
   pending: pendente
   payd: Paga
-  failed: Encerrada com falha
+  failed: Encerrada com Falha
   activerecord:
     models:
       promo: 
