--- a/config/locales/pt-BR/company_payment_options/model.pt-BR.yml
+++ b/config/locales/pt-BR/company_payment_options/model.pt-BR.yml
@@ -4,12 +4,14 @@ pt-BR:
     dont_have: 'Não Possui'
     no_payment_options: 'Ainda não há opções de pagamento configuradas para esta seguradora'
     payment_option_details: 'Detalhes da opção de pagamento'
-    new_payment_option: 'Nova opção de pagamento'
+    new_payment_option: 'Configurar nova opção de pagamento'
     payment_option_created_with_success: 'Opção de pagamento criada com sucesso'
     not_created: 'Opção de pagamento não foi criada'
     edit_payment_option: 'Editar opção de pagamento'
     payment_option_edited_with_success: 'Opção de pagamento editada com sucesso'
     not_edited: 'Opção de pagamento não foi editada'
+    payment_methods_available: 'Meios de pagamento disponíveis'
+    no_payment_methods: 'Não há meios de pagamento disponíveis'
   activerecord:
     models:
       company_payment_option: 
