Mostra erros quando usuario nao preenche todos os campos do formulario
Co-authored-by: ana-borowsky <anavonborowsky@gmail.com>

--- a/config/locales/pt-BR/fraud_reports/models.pt-BR.yml
+++ b/config/locales/pt-BR/fraud_reports/models.pt-BR.yml
@@ -22,3 +22,4 @@ pt-BR:
         description: 'Descrição'
         status: 'Status'
         image: 'Adicione imagens para comprovar a fraude:'
+        images: 'Imagens'
