--- a/config/locales/pt-BR/fraud_reports/models.pt-BR.yml
+++ b/config/locales/pt-BR/fraud_reports/models.pt-BR.yml
@@ -2,11 +2,11 @@ pt-BR:
   messages:
     no_fraud_reports: 'Não há denúncias de fraude registradas.'
     registration_number_fraud_report: 'Denúncia do CPF: %{regis_num}'
-    new_report: 'Nova denúncia.'
+    new_report: 'Nova denúncia'
     new_fraud_report: 'Fazer uma denúncia'
     fraud_success: 'Denúncia enviada com sucesso.'
     fraud_fail: 'Denúncia NÃO cadastrada!'
-
+    add_images: 'Adicione imagens para comprovar a fraude:'
   activerecord:
     models:
       fraud_report:
@@ -21,5 +21,5 @@ pt-BR:
         registration_number: 'CPF'
         description: 'Descrição'
         status: 'Status'
-        image: 'Adicione imagens para comprovar a fraude:'
+        image: 'Imagem'
         images: 'Imagens'
