inicia mudanças para implementaçao de patch do status de cobrança no sistema comparador de seguros
Co-authored-by: thaisantero <thais.antero@gmail.com>

--- a/config/locales/pt-BR/invoices/invoices.pt-BR.yml
+++ b/config/locales/pt-BR/invoices/invoices.pt-BR.yml
@@ -1,6 +1,6 @@
 pt-BR:
   pending: pendente
-  payd: Paga
+  paid: Paga
   failed: Encerrada com Falha
   payment_method_details: 'Detalhes do Meio de Pagamento'
   actual_icon: 'Ícone Atual'
