--- a/config/locales/pt-BR/buttons.pt-BR.yml
+++ b/config/locales/pt-BR/buttons.pt-BR.yml
@@ -5,3 +5,7 @@ pt-BR:
     sign_up: 'Registrar-se'
     forgot_my_pass: 'Esqueci minha senha'
     edit: 'Editar'
+    next: 'Próxima >'
+    last: 'Última'
+    first: 'Primeira'
+    previous: '< Anterior'
