--- a/config/locales/pt-BR/invoices/invoices.pt-BR.yml
+++ b/config/locales/pt-BR/invoices/invoices.pt-BR.yml
@@ -5,8 +5,8 @@ pt-BR:
   messages: 
     charge_updated_successfully: Cobrança atualizada com sucesso
     charge_not_updated: Cobrança não foi atualizada
-  payment_method_details: 'Detalhes do Meio de Pagamento'
-  actual_icon: 'Ícone Atual'
+  payment_method_details: Detalhes do Meio de Pagamento
+  actual_icon: Ícone Atual
   activerecord:
     models:
       invoice:
@@ -25,3 +25,5 @@ pt-BR:
         voucher: Cupom
         transaction_registration_number: Número de registro da transação
         reason_for_failure: Motivo da falha
+        parcels: Parcelas
+        total_price: Preço Total
