adiciona max_parcels ao payment_method

--- a/config/locales/pt-BR/payment_methods/payment_methods.pt-BR.yml
+++ b/config/locales/pt-BR/payment_methods/payment_methods.pt-BR.yml
@@ -16,4 +16,5 @@ pt-BR:
         payment_type: 'Tipo de Pagamento'
         status: 'Status'
         image: 'Ícone'
+        max_parcels: 'Quantidade máxima de parcelas'
      
